fixed spacing on dashboard nav

--- a/app/assets/stylesheets/components/_artist-dashboard-nav.scss
+++ b/app/assets/stylesheets/components/_artist-dashboard-nav.scss
@@ -20,7 +20,7 @@
 
 #dashboard-nav-wrapper li {
   color: #757575;
-  padding: 20px 0px;
+  padding: 15px 0px;
   flex-grow: 1;
   flex-shrink: 0;
     i {
